# AI-agents

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  api.py  app.py  main.py  pyproject.toml  requirements.txt
smarttravel/: README.md  __init__.py  config.py  requirements.txt
smarttravel/agents/: __init__.py  attraction_agent.py  budget_optimizer_agent.py  concierge.py  currency_converter_agent.py  disruption_agent.py  flight_agent.py  hotel_agent.py  itinerary_agent.py  restaurant_agent.py  weather_agent.py
smarttravel/tests/: test_agents.py
weather_agent/: __init__.py  agent.py
